--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-scroll-to-top": "^1.0.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
